# dovecot-nextcloud-auth

./: .gitignore  Cargo.toml  dovecot-auth.toml  dovecot-nextcloud-auth.toml.example  dovecot_auth.toml
src/: auth.rs  bin.rs  db.rs  file.rs  hashlib.rs  http.rs  lib.rs  main.rs
src/auth/: db.rs  hasher.rs  mod.rs  webdav.rs
src/dovecot/: db.rs  error.rs  hashlib.rs  mod.rs
src/dovecot/modules/: db.rs  http.rs  mod.rs
src/modules/: db.rs  file.rs  http.rs  mod.rs
