[package]
name = "dovecot-nextcloud-auth"
version = "0.1.0"
authors = ["Thomas Oettli <spacefreak@noop.ch>"]
edition = "2021"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
mysql = "*"
serde = { version="*", features=["derive"]}
toml = "*"
nix = { version="*", features=["process"]}
urlencoding = "*"
ureq = "*"
base64 = "*"
sha2 = "*"
rand = "*"
