[package]
name = "dovecot-auth"
version = "0.1.0"
authors = ["Thomas Oettli <spacefreak@noop.ch>"]
edition = "2021"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
mysql = "*"
serde = { version="*", features=["derive"] }
toml = "*"
bincode = "*"
nix = { version="*", features=["process"] }
fs2 = "*"
urlencoding = "*"
ureq = "*"
base64 = "*"
sha2 = "*"
rand = "*"
clap = { version="*", features=["derive", "cargo"] }

[features]
serde = []
db = []
http = []

[lib]
name = "dovecot_auth"
path = "src/lib.rs"

[[bin]]
name = "dovecot-auth"
path = "src/bin.rs"
required-features = ["serde"]